--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,22 @@
 <resources>
     <string name="app_name">CovidInTheWorld</string>
+    <string name="home">Home</string>
+    <string name="home_message">This data changes rapidly and might not reflect some cases still being reported. You may refresh records periodically to reflect changes.</string>
+    <string name="total_cases">Total Cases</string>
+    <string name="new_cases">New Cases</string>
+    <string name="total_deaths">Total Deaths</string>
+    <string name="new_deaths">New Deaths</string>
+    <string name="total_recovered">Total Recovered</string>
+    <string name="new_recovered">New Recovered</string>
+    <string name="search">Search</string>
+    <string name="today_cases">Today Cases</string>
+    <string name="deaths">Deaths</string>
+    <string name="today_deaths">Today Deaths</string>
+    <string name="recovered">Recovered</string>
+    <string name="today_recovered">Today Recovered</string>
+    <string name="cases">Cases</string>
+    <string name="stats">Countries</string>
+    <string name="ascending">Ascending</string>
+    <string name="descending">Descending</string>
+    <string name="some_error">Some error occurred, try later.</string>
 </resources>
